<resources>
    <string name="app_name">Asihambeni</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_home">Home</string>
    <string name="nav_notif">Notification</string>
    <string name="nav_pro">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="createAccount">Create an account</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="reset">RESET</string>
    <string name="password_reset">Enter your registered email, to send reset link</string>
    <string name="err_password">Password too short, enter minimum 6 characters!</string>
    <string name="err_login">Authentication failed, check your email and password or sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
